[tool.poetry]
name = "test_files_api"
version = "0.1.0"
description = ""
authors = ["Artur Aliiev <artur.aliiev@magnise.com.ua>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
aiofiles = "^22.1.0"
fastapi-restful = "^0.4.3"
uvicorn = "^0.18.3"
python-dotenv = "^0.21.0"
aiocache = "^0.11.1"
ujson = "^5.5.0"
msgpack = "^1.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
